<resources>
    <string name="app_name">Wps</string>
    <string name="login_page_title">Login</string>
    <string name="email">abc@gmail.com</string>
    <string name="password">Your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="or">OR</string>
    <string name="google_title">Login with Google</string>
    <string name="facebook_title">Login whit Facebook</string>
    <string name="regsiter_title">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="regsiter_page_title">Register</string>
    <string name="username">Full name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="btn_register">Regsiter</string>
    <string name="login_title">You have an account?</string>
    <string name="welcom_title">Wisata Pintar Semarang</string>
    <string name="welcom_des">Bersama</string>
    <string name="welcom_des2">Kami untuk menju tempat wisata anda disemarang</string>
    <string name="des3">Lebih mudah dan nyaman</string>
    <string name="des4">Selamat Berwisata Di Semarang</string>
    <string name="btn_welcome">Go With Wps</string>
    <string name="home_page_title">WPS</string>
    <string name="txt_search_home">Where do you want to go?</string>
    <string name="more">More</string>
    <string name="txt_wisata">Wisata Alam</string>
    <string name="txt_musium">Musium</string>
    <string name="txt_restaurants">Restaurantes</string>
    <string name="txthotel">Hotel</string>
    <string name="txt_title">Tempat Pilihan</string>
    <string name="menu">Menu</string>
    <string name="favorite">Like</string>
    <string name="profil">Profil</string>
    <string name="chat">Chat</string>
    <string name="txt_km">3km</string>
    <string name="txt_reting">4.1</string>
    <string name="txt_time">11:30</string>
    <string name="txt_wib">PM</string>
    <string name="txt_location">Semarang</string>
    <string name="wisata_lise_des">Deskripsi</string>
    <string name="deskirpsi">isi Deskirpsi</string>
</resources>