<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:elevation="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kbv_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_map"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingTop="2dp"
            android:paddingEnd="12dp"
            android:paddingBottom="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">


            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_map"
                app:tint="#FF5113" />

            <TextView
                android:id="@+id/txt_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_km"
                android:textColor="#FF5113"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/star_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_star_rating"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingTop="2dp"
            android:paddingEnd="12dp"
            android:paddingBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/img_star"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_star"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/txt_reting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_reting"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_time"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/star_row"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_time"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_time"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_wib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_wib"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_recrangle_button_nav"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txt_title_wisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_wisata"
                android:textColor="@color/black"
                android:textSize="28sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>