<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPageActivity">
    <!--Header-->
    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login_page_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_logo" />
    <!--Input Email & Password-->
    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <!--Input Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/col_input_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/shape_rectangle_button"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_message"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:fontFamily="@font/montserrat"
                    android:inputType="text"
                    android:maxLength="100"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--Input Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/col_input_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/shape_rectangle_button"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:state_window_focused="true"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>
            <!--Forgot Password-->
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/forgot_password" />

        </LinearLayout>
    </LinearLayout>

    <!--Button Login-->
    <LinearLayout
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_1"
        tools:ignore="UselessLeaf">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/shape_rectangle_button_primary"
            android:drawableEnd="@drawable/ic_shape_vector"
            android:fontFamily="@font/montserrat_bold"
            android:padding="12dp"
            android:text="@string/btn_login"
            android:textColor="@color/white" />


    </LinearLayout>
    <!--Login with Googel, Facebook, & Instagram-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_2"
        tools:ignore="MissingConstraints,UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/or"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_with">

            <!--Facebook-->
            <ImageView
                android:id="@+id/login_btn_fb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_oval_button_white"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintTop_toBottomOf="@+id/login_with" />
            <!--Instagram-->
            <ImageView
                android:id="@+id/login_btn_instagram"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_oval_button_white"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_instagram"
                app:layout_constraintTop_toBottomOf="@+id/login_with" />
            <!--Google-->
            <ImageView
                android:id="@+id/login_btn_google"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_oval_button_white"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_google"
                app:layout_constraintTop_toBottomOf="@+id/login_with" />


        </LinearLayout>
        <!--Register-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/regsiter_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/register"
                android:textColor="#FF5113" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>